--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,14 @@
 {
     "files.associations": {
         "__config": "c",
-        "fcntl.h": "c"
+        "fcntl.h": "c",
+        "sstream": "c",
+        "__bit_reference": "c",
+        "algorithm": "c",
+        "bitset": "c",
+        "chrono": "c",
+        "unordered_map": "c",
+        "so_long_bonus.h": "c"
     },
     "C_Cpp.errorSquiggles": "disabled"
 }
